# SkyWizards

./: .gitignore
Scripts/: MakeMacOSAppBundle-Arm64  MakeMacOSAppBundle-Arm64.sh
Scripts/resources/: LoSW - SFML Icon.icns
Web/Coming Soon/: index.html
Web/Content/: index.html  styles.css
Web/Live/: about-me.html  about.html  contact.php  index.html  losw-bfts.html  losw.html
Web/Live/assets/css/: main.css
src/2D/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
src/2D/Enumerators/: Align.h  AniType.h  FaceDirection.h  SceneType.h
src/2D/Envir/: SWS.cpp  SWS.h  WMObject.cpp  WMObject.h  WMap.cpp  WMap.h
src/2D/IO/: GameSettingsFile.cpp  GameSettingsFile.h
src/2D/enums/: AniType.h  FaceDirection.h  SceneType.h
src/2D/graphics/: TImage.cpp  TImage.h
src/2D/interfaces/: IAnimate.cpp  IAnimate.h  IDraw.cpp  IDraw.h  IMove.h  IScene.h  IUpdate.h
src/2D/managers/: AssetManager.cpp  AssetManager.h  GameManager.cpp  GameManager.h  IOManager.cpp  IOManager.h  InputManager.cpp  InputManager.h  Random.cpp  Random.h  SceneManager.cpp  SceneManager.h
src/2D/models/: AniSequence.h  BackgroundSceneryObject.cpp  BackgroundSceneryObject.h  GameTime.h  Health.cpp  Health.h  Island.h  Leaderboard.cpp  Leaderboard.h  Level.cpp  Level.h  ParallaxBackground.h  ParallaxObject.h  Projectile.cpp  Projectile.h  Score.cpp  Score.h  TextureEntry.h  TextureLibrary.cpp  TextureLibrary.h
src/2D/models/Dev/: TessellatedBackground.cpp  TessellatedBackground.h  TessellatedFloor.cpp  TessellatedFloor.h
src/2D/models/LevelObject/: Boundary.cpp  Boundary.h  BoundaryGroup.cpp  BoundaryGroup.h  Collectable.cpp  Collectable.h  Graphic.cpp  Graphic.h  OLibrary.cpp  OLibrary.h
src/2D/models/MapObject/: WMCollectable.cpp  WMCollectable.h  WMMob.cpp  WMMob.h  WMObject.cpp  WMObject.h  WMap.cpp  WMap.h
src/2D/models/Projectiles/: FireBall.cpp  FireBall.h
src/2D/objects/: BigCoin.cpp  BigCoin.h  Mob.cpp  Mob.h  Player.cpp  Player.h  UICoin.cpp  UICoin.h
src/2D/objects/mobs/: AngryMushroom.cpp  AngryMushroom.h  Cactus.cpp  Cactus.h  ChestMonster.cpp  ChestMonster.h  EyeBall.cpp  EyeBall.h  HappyMushroom.cpp  HappyMushroom.h  SlimeMonster.cpp  SlimeMonster.h
src/2D/os/: GetExecutionDirectory.h  PlatformPaths.h
src/2D/scenes/: CreditsScene.cpp  CreditsScene.h  DevScene.cpp  DevScene.h  GameScene.cpp  GameScene.h  LeaderboardScene.cpp  LeaderboardScene.h  LoadingScene.cpp  LoadingScene.h  MainMenu.cpp  MainMenu.h  SettingsScene.cpp  SettingsScene.h  SplashScreen.cpp  SplashScreen.h
src/2D/scenes/Overlays/: DebugOverlay.cpp  DebugOverlay.h  EndOfLevel.cpp  EndOfLevel.h  GiveUpOverlay.cpp  GiveUpOverlay.h  SubmitScore.cpp  SubmitScore.h
src/Utils/AutoPatcherAdmin/: App.axaml  App.axaml.cs  AutoPatcherAdmin.csproj  AutoPatcherAdmin.sln  ConfigWindow.axaml  ConfigWindow.axaml.cs  FtpUploader.cs  IgnoreManager.cs  JobConfig.cs  JobReportWindow.axaml  JobReportWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  SftpUploader.cs  app.manifest
src/Utils/IPlugin/: IPlugin.sln
src/Utils/IPlugin/IPlugin/: Class1.cs
src/Utils/LevelEditor/: App.axaml  App.axaml.cs  CollectableManager.cs  EntityManager.cs  LevelEditor.csproj  LevelEditor.sln  LevelObjectManager.cs  LibraryImageSelector.axaml  LibraryImageSelector.axaml.cs  LibraryManager.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
src/Utils/LevelEditor/Configurations/Editor/: Paths.cs
src/Utils/LevelEditor/Models/: CollectableItemViewModel.cs  EntityItemViewModel.cs  ListItemViewModel.cs  ObjectItemViewModel.cs
src/Utils/LevelObjectEditor/: App.axaml  App.axaml.cs  Element.cs  LevelObjectEditor.csproj  LevelObjectEditor.sln  LibraryImageSelector.axaml  LibraryImageSelector.axaml.cs  LibraryManager.cs  LibrarySelector.axaml  LibrarySelector.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  SetupWindow.axaml  SetupWindow.axaml.cs  app.manifest
src/Utils/LevelObjectEditor/Configurations/Editor/: Paths.cs
src/Utils/LevelObjectEditor/Configurations/Publish/: PublisherDetails.cs
src/Utils/LevelObjectEditor/Dialogs/: DlgNumber.axaml  DlgNumber.axaml.cs  DlgSlider.axaml  DlgSlider.axaml.cs
src/Utils/LevelObjectEditor/SetupViews/: PathsView.axaml  PathsView.axaml.cs  PublisherDetails.axaml  PublisherDetails.axaml.cs
src/Utils/LibraryEditor/: App.axaml  App.axaml.cs  LibraryEditor.csproj  LibraryEditor.sln  LibraryInfoWindow.axaml  LibraryInfoWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MessageBox.axaml  MessageBox.axaml.cs  Program.cs  app.manifest
src/Utils/LibraryEditor/Plugins/: IPlugin.cs  PluginBase.cs  PluginLoader.cs
src/Utils/LibraryEditor/Processors/: RemoveMetadata.cs  TileImage.cs  WhiteSpaceRemoval.cs  ZeroOffsets.cs
src/Utils/Patcher/: App.axaml.cs  Config.cs  FtpDownloader.cs  IniFile.cs  MainWindow.axaml  MainWindow.axaml.cs  Patcher.csproj  Patcher.sln  Program.cs  plist.cs
src/Utils/Plugins/LibraryEditor/LEPlugin_PolyArtTexture/: LEPlugin_PolyArtTexture.csproj  OrganicTriangleGenerator.cs  Plugin.cs  PolyArtTexturePlugin.cs  TriangleTessellationGenerator.cs  TriangleTessellationGeneratorB.cs
src/Utils/Plugins/LibraryEditor/LEPlugin_PolyArtTexture_AB/: AlexsAlgo.cs  LEPlugin_PolyArtTexture_AB.csproj  Plugin.cs
src/Utils/Plugins/LibraryEditor/LEPlugin_PolyArtTexture_SH/: LEPlugin_PolyArtTexture_SH.csproj  Plugin.cs
src/Utils/WizardPlugin/: WizardPlugin.csproj
src/Utils/WizardPlugin/LibraryEditorPlugin/: IPlugin.cs  PluginBase.cs  PluginLoader.cs
src/Utils/libType/: libType.sln
src/Utils/libType/libType/: Boundry.cs  Graphic.cs  LImage.cs  LType.cs  McLib.cs  OLibrary.cs  PLibrary.cs  StreamLibrary.cs  WMObject.cs  WMap.cs  libType.csproj
src/Utils/libType/libType/Converters/: PLibType0.cs
src/Utils/libType/libType/ImageLibrary/: LImage.cs  PLibrary.cs
src/Utils/libType/libType/LevelObject/: Boundary.cs  BoundaryGroup.cs  Boundry.cs  (+3 more)
src/Utils/qdLibBuilder/: Program.cs  lib.cs  qdLibBuilder.csproj  qdLibBuilder.sln
src/Web/shareserver/: go.mod  main.go
src/Web/shareserver/handlers/: auth.go  files.go
src/Web/shareserver/models/: file.go
(+6 files in other folders)
